--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">HTML & CSS</div>
-        <a href="curriculum-html-css-main\curriculum-html-css-main\README.md"><img src="images\html-1.svg" alt="HTML & CSS" style="width:100%"></a>
+        <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-html-css-main/curriculum-html-css-main/README.md"><img src="images\html-1.svg" alt="HTML & CSS" style="width:100%"></a>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">JAVASCRIPT</div>
-        <a href="curriculum-javascript-main\curriculum-javascript-main\README.md"><img src="images/javascript-1.svg" alt="JAVASCRIPT" style="width:100%"></a>
+        <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-javascript-main/curriculum-javascript-main/README.md"><img src="images/javascript-1.svg" alt="JAVASCRIPT" style="width:100%"></a>
         
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">REACT</div>
-        <a href="curriculum-react-redux-main\curriculum-react-redux-main\README.md"><img src="images/react-academy.svg" alt="React" style="width:100%"></a>
+        <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-react-redux-main/curriculum-react-redux-main/README.md"><img src="images/react-academy.svg" alt="React" style="width:100%"></a>
       </div>
     </div>
     
@@ -61,19 +61,19 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
         <div class="w3-display-container">
           <div class="w3-display-topleft w3-black w3-padding">RUBY</div>
-          <a href="curriculum-ruby-main\curriculum-ruby-main\README.md"><img src="images/ruby.svg" alt="RUBY" style="width:90%"></a>
+          <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-ruby-main/curriculum-ruby-main/README.md"><img src="images/ruby.svg" alt="RUBY" style="width:90%"></a>
         </div>
       </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">RAILS</div>
-        <a href="curriculum-rails-main\curriculum-rails-main\README.md"><img src="images/rails-1.svg" alt="RAILS" style="width:99%"></a>     
+        <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-rails-main/curriculum-rails-main/README.md"><img src="images/rails-1.svg" alt="RAILS" style="width:99%"></a>     
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">DATABASE</div>
-        <a href="curriculum-databases-main\curriculum-databases-main\README.md"><img src="images/amazon-database.svg" alt="DATABASE" style="width:99%"></a>
+        <a href="https://github.com/jash-debug/FULL-STACK-PATH/blob/main/curriculum-databases-main/curriculum-databases-main/README.md"><img src="images/amazon-database.svg" alt="DATABASE" style="width:99%"></a>
       </div>
     </div>
   </div>
